--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "color-thief-browser": "^2.0.2",
     "konva": "^9.3.20",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "openai": "^5.8.2",
     "react": "^19.0.0",
@@ -73,7 +73,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.3.5",
+    "eslint-config-next": "^16.1.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
